# longrun-agent

./: .gitignore  README.md  longrun-agent.toml  pyproject.toml
docs/: anthropic-harness-notes.md  effective-harnesses-for-long-running-agents-zh.md  self-improvement-loop.md
docs/migrations/: 2026-02-14-runtime-v2.md
scripts/: verify_cli_matrix.sh
src/longrun_agent/: __init__.py  agent.py  ci_pipeline.py  cli.py  config.py  context_compression.py  conversation.py  feature_list.py  harness.py  improvement_cycle.py  multi_agent.py  prompt.py  prompts.py  repair.py  retry.py  self_improve.py  session_metadata.py  task_graph.py
src/longrun_agent/article/: __init__.py  progress.py  prompts.py  security.py
src/longrun_agent/backends/: __init__.py  base.py  claude_sdk.py  codex_cli.py  factory.py
tests/: test_article_guardrails.py  test_article_mode.py  test_backend_factory.py  test_ci_pipeline.py  test_claude_backend.py  test_cli_backend_flags.py  test_cli_bootstrap.py  test_cli_configure.py  test_cli_go.py  test_cli_goal_prompts.py  test_cli_pipeline.py  test_codex_backend.py  test_config.py  test_context_compression.py  test_conversation.py  test_feature_list.py  test_gate_engine.py  test_gates.py  test_harness.py  test_harness_backend.py  test_harness_no_change_confirmation.py  test_harness_remediation.py  test_improvement_cycle.py  test_loop_controls.py  test_multi_agent.py  test_prompt.py  test_prompt_provider.py  test_remediation.py  test_repair.py  test_retry.py  test_runtime_contracts.py  test_self_improve.py  test_session_metadata.py  test_task_graph.py
(+10 files in other folders)
